tests/error/struct_errors/mutual_recursive.err
Error: Unsupported (at $FILE:15:8)
   | 
13 | @guppy.struct(module)
14 | class StructB:
15 |     y: "StructA"
   |         ^^^^^^^ Recursive structs are not supported

Guppy compilation failed due to 1 previous error
